# micro-tiling

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  database.py  docker-compose.yml  ensicoin.py  generate_doc.sh  matrix_init.py  micro_tilling.target  print_segments.py  protocol.dia  rotate.bf  start_services.sh  status_code.json
API/: .gitignore  Dockerfile  Readme.md  app.py  database.py  go.mod  go.sum  init.py  main.go  main.py  main_save.py  run.sh  schema.sql  swagger.json  swagger.yaml
API/instance/: flaskr.sqlite
API/source/: conf.py  index.rst  init.rst
Aggregator/: database.py
Cruxingator/: .gitignore  Dockerfile  database.py  ensicoin.py  smtp-serv.py  smtp_serv.py  split.py  start.sh
Cruxingator/source/: conf.py  index.rst  split.rst
Millllllll/: Dockerfile  Readme.md  bf_debugger.py  bf_interpreter.py  database.py  init.sh  mill.proto  mill_pb2.py  mill_pb2_grpc.py  millllllll.py  millllllll.service  quarter_turn.bf  quarter_turns.bf  rotate.bf  rotate.py  start.sh  supervisord.conf  symmetry.bf  tester.py
Millllllll/gofish-1.2/gofish/: .gitignore  AUTHORS  ChangeLog  Configure_GoFish  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  _cache  _gopher+  check-files  checkem  config.c  config.h.in  configure  configure.in  dotcache.5  gofish-www.conf  gofish.1  gofish.5  gofish.c  gofish.conf  gofish.h  gofish.spec  gopherd.1  http.c  init-gofish  init-gopherd  log-rotate  log.c  mime.c  mkcache.1  mkcache.c  mmap_cache.c  socket.c  version.h  webtest.c
Millllllll/gofish-1.2/gofish/debian/: changelog  control  copyright  rules
Millllllll/gofish-1.2/gofish/debian/maint/: postinst  postrm  prerm
Millllllll/gofish-1.2/gofish/slackware/: doinst.sh  gofish.SlackBuild  slack-desc
Millllllll/gopher/: golfer.py  test_file.json
Millllllll/gopher/source/: conf.py
Millllllll/source/: conf.py  index.rst  mill.rst  rotate.rst
PI-API/: start.sh  wat.py
PI_A_PI/: manage.py
PI_A_PI/PI_A_PI/: settings.py  urls.py  wsgi.py
Solidator/: Dockerfile  database.py  ensicoin.py  ensicoin_waiter.py  point_process.py  solidator.py  start.sh
Translator/: .gitignore  Dockerfile  Readme.md  app.py  bf_interpreter.py  inotify-serv.py  inotify_serv.py  kanji  main.py  translator.bf  translator.py  translator.service
Translator/keys/: sec.gpg
Translator/source/: conf.py  index.rst  inotify-serv.rst  translator.rst  translator_service.rst
Unitator/: Dockerfile  Readme.md  clipping.py  init.sh  start.sh  test.html  unitator.py  unitator.service
Unitator/source/: clipping.rst  conf.py  index.rst  unitator.rst
a_pi/: .gitignore  Dockerfile  Readme.md  a_pi.service  app.py  database.py  main.py  matrix_user.json  mill_pb2.py  mill_pb2_grpc.py  post.html  schema.sql  segment_generator.py  start.sh
a_pi/instance/: flaskr.sqlite
a_pi/source/: conf.py  flask_application.rst  index.rst  segment_generator.rst
client_library/: Readme.md  client.py
client_library/source/: conf.py  index.rst  library.rst
deployment/: fabio.nomad  micro-tiling.nomad
deployment/kubernetes/: etcd-values.yaml  micro-tiling.yaml  storageclass.yaml  traefik-ui.yaml
deployment/kubernetes/kubernetes/: traefik-ds.yaml
doc/: index.html
docs/: API.rst  conf.py  database.rst  ensicoin.rst  index.html  index.rst  init.rst  requirements.txt
docs/API/: API.html  genindex.html  index.html  index.rst  init.html  init.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/API/_modules/: index.html  init.html
docs/API/_sources/: API.rst.txt
docs/Cruxingator/: index.rst  smtp_serv.rst  split.rst
docs/Millllllll/: bf_interpreter.html  genindex.html  index.html  index.rst  mill.html  mill.rst  objects.inv  py-modindex.html  rotate.html  rotate.rst  search.html  searchindex.js
docs/Millllllll/_modules/: bf_interpreter.html  index.html  millllllll.html  rotate.html
docs/Solidator/: index.rst  master.rst  sub.rst
docs/Translator/: app.rst  genindex.html  index.html  index.rst  inotify-serv.html  inotify-serv.rst  objects.inv  py-modindex.html  search.html  searchindex.js  translator.html  translator.rst  translator_service.html
docs/Unitator/: clipping.html  clipping.rst  genindex.html  index.rst  objects.inv  searchindex.js  unitator.html  unitator.rst
docs/a_pi/: flask_application.html  flask_application.rst  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  segment_generator.html  segment_generator.rst
docs/client_library/: command_line.html  genindex.html  index.html  index.rst  library.html  library.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/golfer/: genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
gopher/: Readme.md  golfer.py  golfer.service
gopher/files/: aa  ee  iii
gopher/source/: index.rst
init/: Readme.md  init.py
keys/: passphrase  pub.gpg
main/: main.py
swagger_api/: index.html  swagger.yaml
(+40 files in other folders)
